# Strategy_v1_gazebo

./: README.md
catkin_ws/src/motion_plan/: CMakeLists.txt
catkin_ws/src/motion_plan/scripts/: obstacle_avoidance.py  reading_laser.py
simulation_ws/devel/: .catkin  .rosinstall  setup.sh
simulation_ws/devel/lib/pkgconfig/: m4wr_description.pc  my_worlds.pc
simulation_ws/devel/share/m4wr_description/cmake/: m4wr_descriptionConfig.cmake
simulation_ws/devel/share/my_worlds/cmake/: my_worldsConfig.cmake
simulation_ws/src/Playground_game/launch/: bug0.launch  bug1.launch  world1.launch  world2.launch  world3.launch
simulation_ws/src/m4wr_description/: CMakeLists.txt  package.xml
simulation_ws/src/m4wr_description/launch/: rviz.launch  spawn.launch
simulation_ws/src/m4wr_description/urdf/: m4wr.gazebo  m4wr.xacro  macros.xacro  materials.xacro
