<?xml version="1.0"?>

<package format="2">
  <name>m4wr_description</name>
  <version>0.0.0</version>
  <description>The m4wr_description package</description>

  <maintainer email="robotech.nancy@gmail.com">user</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <export>
    
  </export>
</package>
